@@ -51,21 +51,22 @@ import org.nuxeo.runtime.api.Framework;
  * Deals with sending DocumentMessage objects as JMS ObjectMessage.
  *
  * @author <a href="mailto:ja@nuxeo.com">Julien Anguenot</a>
- *
  */
-public final class JMSDocumentMessageProducer {
 //XXX: in the process of being refactored
-    private static boolean transacted;
-    private static boolean isDeliveryPersistent;
-    private static boolean isDisableMessageID;
-    private static boolean isDisableMessageTimestamp;
+public final class JMSDocumentMessageProducer {
+
+    private static final boolean transacted;
+    private static final boolean isDeliveryPersistent;
+    private static final boolean isDisableMessageID;
+    private static final boolean isDisableMessageTimestamp;
     private static final Log log = LogFactory.getLog(JMSDocumentMessageProducer.class);
+
     static {
         Properties runtime = Framework.getRuntime().getProperties();
-        transacted = new Boolean(runtime.getProperty("jms.useTransactedConnection"));
-        isDeliveryPersistent = new Boolean(runtime.getProperty("jms.isDeliveryPersistent"));
-        isDisableMessageID = new Boolean(runtime.getProperty("jms.isDisableMessageID"));
-        isDisableMessageTimestamp = new Boolean(runtime.getProperty("jms.isDisableMessageTimestamp"));
+        transacted = Boolean.valueOf(runtime.getProperty("jms.useTransactedConnection"));
+        isDeliveryPersistent = Boolean.valueOf(runtime.getProperty("jms.isDeliveryPersistent"));
+        isDisableMessageID = Boolean.valueOf(runtime.getProperty("jms.isDisableMessageID"));
+        isDisableMessageTimestamp = Boolean.valueOf(runtime.getProperty("jms.isDisableMessageTimestamp"));
     }
 
     // Utility class.
@@ -76,7 +77,7 @@ public final class JMSDocumentMessageProducer {
             String jmsConnectionFactoryJndiName, Context ctx)
             throws DocumentMessageProducerException {
 
-        TopicConnectionFactory jmsConnectionFactory; 
+        TopicConnectionFactory jmsConnectionFactory;
         try {
             jmsConnectionFactory = (TopicConnectionFactory) ctx.lookup(jmsConnectionFactoryJndiName);
 
@@ -105,6 +106,7 @@ public final class JMSDocumentMessageProducer {
 
         return jmsDestination;
     }
+
     public static void sendNXCoreEventMessages(List<NXCoreEvent> messages,
             String connection, String destination)
             throws DocumentMessageProducerException {
@@ -120,7 +122,7 @@ public final class JMSDocumentMessageProducer {
             throw exception;
         }
     }
-    public static void sendEventMessages(List<EventMessage> messages, String connection, String destination) 
+    public static void sendEventMessages(List<EventMessage> messages, String connection, String destination)
             throws DocumentMessageProducerException {
         DocumentMessageProducerException exception = null;
         try {
@@ -133,6 +135,7 @@ public final class JMSDocumentMessageProducer {
             throw exception;
         }
     }
+
     public static void sendDocumentMessages(List<DocumentMessage> messages,
             String connectionFactoryJndiName, String destinationJndiName)
             throws DocumentMessageProducerException {
@@ -148,6 +151,7 @@ public final class JMSDocumentMessageProducer {
             throw exception;
         }
     }
+
     public static void sendMessages(List<Serializable> messages,
             String connectionFactoryJndiName, String destinationJndiName)
             throws DocumentMessageProducerException {
@@ -168,7 +172,8 @@ public final class JMSDocumentMessageProducer {
             throws DocumentMessageProducerException {
         DocumentMessageProducerException exception = null;
         try {
-            sendMessage(message, connectionFactory, destination, new InitialContext(), message.getEventId(), JMSConstant.DOCUMENT_MESSAGE);
+            sendMessage(message, connectionFactory, destination, new InitialContext(),
+                    message.getEventId(), JMSConstant.DOCUMENT_MESSAGE);
         } catch (NamingException ne) {
             exception = new DocumentMessageProducerException(ne);
         }
@@ -177,6 +182,7 @@ public final class JMSDocumentMessageProducer {
             throw exception;
         }
     }
+
     public static void sendMessage(Serializable message,
             String connectionFactoryJndiName, String destinationJndiName)
             throws DocumentMessageProducerException {
@@ -191,7 +197,7 @@ public final class JMSDocumentMessageProducer {
         if (exception != null) {
             throw exception;
         }
-    }    
+    }
     private static void sendNXCoreEventMessages(List<NXCoreEvent> messages,
             String connectionFactoryJndiName, String destinationJndiName,
             Context ctx) throws DocumentMessageProducerException {
@@ -236,6 +242,7 @@ public final class JMSDocumentMessageProducer {
             }
         }
     }
+
     private static void sendEventMessages(List<EventMessage> messages,
             String connectionFactoryJndiName, String destinationJndiName,
             Context ctx) throws DocumentMessageProducerException {
@@ -281,6 +288,7 @@ public final class JMSDocumentMessageProducer {
             }
         }
     }
+
     private static void sendDocumentMessages(List<DocumentMessage> messages,
             String connectionFactoryJndiName, String destinationJndiName,
             Context ctx) throws DocumentMessageProducerException {
@@ -326,6 +334,7 @@ public final class JMSDocumentMessageProducer {
             }
         }
     }
+
     private static void sendMessages(List<Serializable> messages,
             String connectionFactoryJndiName, String destinationJndiName,
             Context ctx) throws DocumentMessageProducerException {
@@ -355,24 +364,24 @@ public final class JMSDocumentMessageProducer {
                     je);
         } finally {
             try {
-                if (messageProducer != null)
+                if (messageProducer != null) {
                     messageProducer.close();
-                if (session != null)
+                }
+                if (session != null) {
                     session.close();
-                if (connection != null)
+                }
+                if (connection != null) {
                     connection.close();
+                }
             } catch (JMSException je) {
                 log.error("An error during JMS cleanup", je);
             }
         }
-
     }
 
     private static void sendMessage(Serializable message,
             String connectionFactoryJndiName, String destinationJndiName,
             Context ctx, String eventId, String messageType) throws DocumentMessageProducerException {
-
-
         try {
             TopicConnectionFactory connectionFactory = getJmsConnectionFactory(
                     connectionFactoryJndiName, ctx);
